--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,14 +30,16 @@
 
 <div class="about">
   <h1 id="site-title">Hi, I'm Alex.</h1>
-  <img alt="Alex" src="images/alex.jpg" />
+  <img alt="Alex" src="images/alex.jpeg" />
   <p>I'm a computer scientist. I am interested in probabilistic models of computation, especially as related to programming languages, natural language processing, and massive scale algorithms.</p>
 
-  <p>Here are some places you can find me:</p>
+  <p>Here are some places you can find me in the wilderness of the Internet:</p>
   <ul class="nav-list">
+    <li><img alt="Facebook" src="images/facebook.png" /> <a href="https://www.facebook.com/clemmer.alexander">facebook.com/clemmer.alexander</a></li>
     <li><img alt="Twitter" src="images/twitter.png" /> <a href="https://twitter.com/hausdorff_space">@hausdorff_space</a></li>
     <li><img alt="GitHub" src="images/github.png" /> <a href="https://github.com/hausdorff">github.com/hausdorff</a></li>
     <li><img alt="Hacker News" src="images/hn.png" /> <a href="https://news.ycombinator.com/user?id=antics">antics</a></li>
+    <li><img alt="LinkedIn" src="images/linkedin.png" /> <a href="http://www.linkedin.com/pub/alex-clemmer/1b/a20/a3">LinkedIn</a></li>
   </ul>
 </div>
 
