Continue to remove David's name from stuff

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 
   <!-- Homepage CSS -->
   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
-  <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="David Albert" />
+  <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="Alex Clemmer" />
 
   <script type="text/javascript">
 
@@ -29,8 +29,8 @@
 <body>
 
 <div class="about">
-  <h1 id="site-title">Hi, I'm Alex.</h1>
   <img alt="Alex" src="images/alex.jpeg" />
+  <h1 id="site-title">Hi, I'm Alex.</h1>
   <p>I'm a computer scientist. I am interested in probabilistic models of computation, especially as related to programming languages, natural language processing, and massive scale algorithms.</p>
 
   <p>Here are some places you can find me in the wilderness of the Internet:</p>
