Update frontpage image size

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 <body>
 
 <div class="about">
-  <img alt="Alex" src="images/alex.jpeg" />
+  <img alt="Alex" src="images/alex.jpeg" height="150" width="150"/>
   <h1 id="site-title">Hi, I'm Alex.</h1>
   <p>I'm a computer scientist. I am interested in probabilistic models of computation, especially as related to programming languages, natural language processing, and massive scale algorithms.</p>
 
