--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,14 @@
     })();
 
   </script>
+
+  <script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script>
+
+  <noscript>
+    <h2 style="border-style: solid; padding:5px; color:red;">Hey there! I see you're not using JavaScript. Just FYI, I use <a href="http://www.mathjax.org/" style="color:blue;">MathJax</a> to display things that deserve to look like math.</h2>
+  </noscript>
 </head>
 <body>
 
