Add space between greeting and picture

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,8 @@
 
 <div class="about">
   <img alt="Alex" src="images/alex.jpeg" height="150" width="150"/>
-  <h1 id="site-title">Hi, I'm Alex.</h1>
+  <br/>
+  <h1 id="site-title">Hi, I'm Alex Clemmer.</h1>
   <p>I'm a computer scientist. I am interested in probabilistic models of computation, especially as related to programming languages, natural language processing, and massive scale algorithms.</p>
 
   <p>Here are some places you can find me in the wilderness of the Internet:</p>
