Update text on front page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,9 @@
 
 <div class="about">
   <img alt="Alex" src="images/alex.jpeg" height="150" width="150"/>
-  <br/>
+  <p></p>
   <h1 id="site-title">Hi, I'm Alex Clemmer.</h1>
-  <p>I'm a computer scientist. I am interested in probabilistic models of computation, especially as related to programming languages, natural language processing, and massive scale algorithms.</p>
+  <p>I'm a computer scientist. I'm interested in machine learning, programming languages, natural language processing, and massive scale algorithms. </p>
 
   <p>Here are some places you can find me in the wilderness of the Internet:</p>
   <ul class="nav-list">
