--- a/css/screen.css
+++ b/css/screen.css
@@ -19,6 +19,7 @@ body {
   background-color: white;
   font: 13.34px helvetica, arial, clean, sans-serif;
   *font-size: small;
+  font-weight: lighter;
   text-align: center;
 }
 
