--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
 <body>
 
 <div class="about">
-  <img alt="Alex" src="images/alex.jpeg" height="150" width="150"/>
+  <img alt="Alex" src="images/alex2.jpg" height="150" width="150"/>
   <p></p>
   <h1 id="site-title">Hi, I'm Alex Clemmer.</h1>
   <p>I'm a computer scientist. I'm interested in machine learning, programming languages, natural language processing, and massive scale algorithms. </p>
