Make links going to external open in new window

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,9 +60,9 @@
 
   <p>Here are some places you can find me in the wilderness of the Internet:</p>
   <ul class="nav-list">
-    <li><img alt="Twitter" src="images/twitter.png" /> <a href="https://twitter.com/hausdorff_space">@hausdorff_space</a></li>
-    <li><img alt="GitHub" src="images/github.png" /> <a href="https://github.com/hausdorff">github.com/hausdorff</a></li>
-    <li><img alt="Hacker News" src="images/hn.png" /> <a href="https://news.ycombinator.com/user?id=antics">antics</a></li>
+    <li><img alt="Twitter" src="images/twitter.png" /> <a href="https://twitter.com/hausdorff_space" target="_new">@hausdorff_space</a></li>
+    <li><img alt="GitHub" src="images/github.png" /> <a href="https://github.com/hausdorff" target="_new">github.com/hausdorff</a></li>
+    <li><img alt="Hacker News" src="images/hn.png" /> <a href="https://news.ycombinator.com/user?id=antics" target="_new">antics</a></li>
   </ul>
 </div>
 
