Subtle change to CSS of footer

--- a/css/screen.css
+++ b/css/screen.css
@@ -185,7 +185,7 @@ ul.posts {
     }
 
       .site .footer a {
-        color: #aaa;
+        color: #bbb;
       }
 
       .site .footer .contact a {
