--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
   <img alt="Alex" src="images/alex2.jpg" height="150" width="150"/>
   <p></p>
   <h1 id="site-title">Hi, I'm Alex Clemmer.</h1>
-  <p>I'm a computer scientist. I'm interested in machine learning, programming languages, natural language processing, and massive scale algorithms. </p>
+  <p>I'm a computer scientist. I'm primarily interested in <b>machine learning</b>. I also do work in the areas of programming languages, natural language processing, and massive scale algorithms. </p>
 
   <p>Here are some places you can find me in the wilderness of the Internet:</p>
   <ul class="nav-list">
@@ -71,8 +71,9 @@
   {{ content }}
 
   <div class="footer">
-    <div>Forked from: <a href="https://github.com/davidbalbert/davidbalbert.github.com">davidalbert.github.com</a></div>
-    <div xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/" about="http://www.komodomedia.com/blog/2008/12/social-media-mini-iconpack/"><span property="dct:title">Social Network Icon Pack</span> (<a rel="cc:attributionURL" property="cc:attributionName" href="http://www.komodomedia.com/blog/2008/12/social-media-mini-iconpack/">Komodo Media, Rogie King</a>), Social Media Icons (<a href="http://paulrobertlloyd.com/2009/06/social_media_icons">Paul Robert Lloyd</a>) </div>
+    <div>(c) 2013 Alex Clemmer. <a href="https://github.com/hausdorff/hausdorff.github.com" target="_new">Released</a> under the MIT license.
+    <div>Forked from: <a href="https://github.com/davidbalbert/davidbalbert.github.com" target="_new">davidalbert.github.com</a></div>
+    <div xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/" about="http://www.komodomedia.com/blog/2008/12/social-media-mini-iconpack/"><span property="dct:title">Social Network Icon Pack</span> (<a rel="cc:attributionURL" property="cc:attributionName" href="http://www.komodomedia.com/blog/2008/12/social-media-mini-iconpack/" target="_new">Komodo Media, Rogie King</a>), Social Media Icons (<a href="http://paulrobertlloyd.com/2009/06/social_media_icons" target="_new">Paul Robert Lloyd</a>) </div>
   </div>
 </div>
 
