Update personal statement

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,9 @@
   <img alt="Alex" src="images/alex2.jpg" height="150" width="150"/>
   <p></p>
   <h1 id="site-title">Hi, I'm Alex Clemmer.</h1>
-  <p>I'm a computer scientist. I'm primarily interested in <b>machine learning</b>. I also do work in the areas of programming languages, natural language processing, and massive scale algorithms. </p>
+  <p>I'm a computer scientist. I am primarily interested in <b>massive-scale machine learning</b>. ∀x: ML + x.</p>
+
+  <p>I also do work in the areas of programming languages, natural language processing, and massive scale algorithms. </p>
 
   <p>Here are some places you can find me in the wilderness of the Internet:</p>
   <ul class="nav-list">
