--- a/css/screen.css
+++ b/css/screen.css
@@ -23,13 +23,13 @@ body {
   text-align: center;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1 {
   font-size: 300%;
   line-height: 0.90em;
+  margin-bottom: 0.5em;
 }
 
-h1 {
-  margin-bottom: 1em;
+h2, h3, h4, h5, h6 {
 }
 
 p {
