Update blog description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,12 +55,8 @@
 <div class="about">
   <img alt="Alex" src="images/alex3.jpg" height="150" width="150"/>
   <p></p>
-  <h1 id="site-title">Hi, I'm Alex Clemmer.</h1>
-  <p>I'm a computer scientist. I am primarily interested in <b>massive-scale machine learning</b>. ∀x: ML + x.</p>
-
-  <p>I also do work in the areas of programming languages, natural language processing, and massive scale algorithms. </p>
-
-  <p>Here are some places you can find me in the wilderness of the Internet:</p>
+  <h1 id="site-title">Computer "scientist"</h1>
+  <p>Hi there, my name is Alex Clemmer, and this is a blog about the stuff that has not quite gotten me fired yet.</p>
   <ul class="nav-list">
     <li><img alt="Twitter" src="images/twitter.png" /> <a href="https://twitter.com/hausdorff_space" target="_new">@hausdorff_space</a></li>
     <li><img alt="GitHub" src="images/github.png" /> <a href="https://github.com/hausdorff" target="_new">github.com/hausdorff</a></li>
