Update layout of main page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,9 +58,9 @@
   <h1 id="site-title">Computer "scientist"</h1>
   <p>Hi there, my name is Alex Clemmer, and this is a blog about the stuff that has not quite gotten me fired yet.</p>
   <ul class="nav-list">
+    <li><img alt="personal site" src="images/home3.png" /> <a href="http://www.nullspace.io" target="_new">personal site</a></li>
     <li><img alt="Twitter" src="images/twitter.png" /> <a href="https://twitter.com/hausdorff_space" target="_new">@hausdorff_space</a></li>
     <li><img alt="GitHub" src="images/github.png" /> <a href="https://github.com/hausdorff" target="_new">github.com/hausdorff</a></li>
-    <li><img alt="Hacker News" src="images/hn.png" /> <a href="https://news.ycombinator.com/user?id=antics" target="_new">antics</a></li>
   </ul>
 </div>
 
