Add credit for icon on front page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
   <div class="footer">
     <div>(c) 2013 Alex Clemmer. <a href="https://github.com/hausdorff/hausdorff.github.com" target="_new">Released</a> under the MIT license.
     <div>Forked from: <a href="https://github.com/davidbalbert/davidbalbert.github.com" target="_new">davidalbert.github.com</a></div>
-    <div xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/" about="http://www.komodomedia.com/blog/2008/12/social-media-mini-iconpack/"><span property="dct:title">Social Network Icon Pack</span> (<a rel="cc:attributionURL" property="cc:attributionName" href="http://www.komodomedia.com/blog/2008/12/social-media-mini-iconpack/" target="_new">Komodo Media, Rogie King</a>), Social Media Icons (<a href="http://paulrobertlloyd.com/2009/06/social_media_icons" target="_new">Paul Robert Lloyd</a>) </div>
+    <div xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/" about="http://www.komodomedia.com/blog/2008/12/social-media-mini-iconpack/"><span property="dct:title">Social Network Icon Pack</span> (<a rel="cc:attributionURL" property="cc:attributionName" href="http://www.komodomedia.com/blog/2008/12/social-media-mini-iconpack/" target="_new">Komodo Media, Rogie King</a>), Social Media Icons (<a href="http://paulrobertlloyd.com/2009/06/social_media_icons" target="_new">Paul Robert Lloyd</a>), and <a href="http://www.glyphish.com/" target="_new"> Glyphish pro</a> </div>
   </div>
 </div>
 
