--- a/css/screen.css
+++ b/css/screen.css
@@ -137,9 +137,11 @@ ul.posts {
   font-size: 110%;
   text-align: left;
   width: 50em;
-  margin: 1em auto 2em auto;
+  /*margin: 12em auto 2em auto;*/
   line-height: 1.5em;
   float: left;
+  position: absolute;
+  left: 14em;
   padding-bottom:6em;
 }
 
