Add link for RSS feed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,6 +61,7 @@
     <li><img alt="personal site" src="images/home3.png" /> <a href="http://www.nullspace.io" target="_new">personal site</a></li>
     <li><img alt="Twitter" src="images/twitter.png" /> <a href="https://twitter.com/hausdorff_space" target="_new">@hausdorff_space</a></li>
     <li><img alt="GitHub" src="images/github.png" /> <a href="https://github.com/hausdorff" target="_new">github.com/hausdorff</a></li>
+    <li><img alt="RSS" src="images/feed.png" /> <a href="http://blog.nullspace.io/feed.xml" target="_new">RSS feed</a></li>
   </ul>
 </div>
 
