Update blurb to be more sarcastic

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
   <img alt="Alex" src="images/alex3.jpg" height="150" width="150"/>
   <p></p>
   <h1 id="site-title">Computer "scientist"</h1>
-  <p>Hi there, my name is Alex Clemmer, and this is a blog about the stuff that has not quite gotten me fired yet.</p>
+  <p><a href="http://www.nullspace.io" target="_new">Alex Clemmer</a> is a computer programmer. Friends and coworkers rave about Alex, excitedly pointing out that he is "vaguely competent" and "the boss's son".</p>
   <ul class="nav-list">
     <li><img alt="personal site" src="images/home3.png" /> <a href="http://www.nullspace.io" target="_new">personal site</a></li>
     <li><img alt="Twitter" src="images/twitter.png" /> <a href="https://twitter.com/hausdorff_space" target="_new">@hausdorff_space</a></li>
