--- a/css/screen.css
+++ b/css/screen.css
@@ -16,36 +16,43 @@ html, body {
 }
 
 body {
-  background-color: white;
-  font: 13.34px helvetica, arial, clean, sans-serif;
-  *font-size: small;
+  font: 1.1em helvetica, arial, clean, sans-serif;
   font-weight: lighter;
   text-align: center;
+  color: #4a4a4a;
+  background: #f5f5f5;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
 }
 
 h1 {
+  margin-top: 0em;
   font-size: 300%;
-  line-height: 0.90em;
   margin-bottom: 0.5em;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  color: #3a3a3a;
+  line-height: 1.1em;
+}
+
 h2, h3, h4, h5, h6 {
+  margin-top: 1.5em;
+  margin-bottom: -0.7em;
 }
 
 p {
-  margin: 1em 0;
+  margin: 1.3em 0;
 }
 
 a {
-  color: #00a;
+  color: #4a49dd;
+  font-style: normal;
+  text-decoration: none;
 }
 
 a:hover {
-  color: black;
-}
-
-a:visited {
-  color: #a0a;
+  color: #b5000c;
+  text-decoration: underline;
 }
 
 table {
@@ -90,21 +97,14 @@ ul.posts {
 }
 
 .about {
+  font-size: 0.8em;
   text-align: left;
   width: 12em;
   float: left;
   margin-left: 1em;
-  margin-right: 5em;
+  margin-right: 0.5em;
   margin-top: 1em;
   line-height: 1.3em;
-}
-
-.about a:visited {
-  color: #00a;
-}
-
-.about a:hover {
-  color: black;
 }
 
 .nav {
@@ -136,13 +136,11 @@ ul.posts {
 .site {
   font-size: 110%;
   text-align: left;
-  width: 50em;
-  /*margin: 12em auto 2em auto;*/
-  line-height: 1.5em;
+  width: 800px;
+  line-height: 1.3em;
   float: left;
   position: absolute;
-  left: 14em;
-  padding-bottom:6em;
+  left: 11em;
   padding-top:2em;
 }
 
@@ -153,7 +151,6 @@ ul.posts {
 }
 
   .site .title a {
-    color: #00a;
     text-decoration: none;
   }
 
@@ -177,18 +174,14 @@ ul.posts {
 
   .site .footer {
     font-size: 80%;
-    color: #ccc;
+    color: #aaa;
     border-top: 2px solid #eee;
     margin-top: 2em;
-    /*margin-bottom: 3em;*/
-    width:70em;
     padding-top: 1em;
     line-height: 1.3em;
     overflow: hidden;
-    position:fixed;
     bottom:0px;
     padding-bottom:1em;
-    background-color:#fff;
   }
 
     .site .footer .contact {
@@ -248,14 +241,18 @@ ul.posts {
   /* standard */
 
   #post pre {
-    border: 1px solid #ddd;
-    background-color: #eef;
+    background-color: #fafafa;
+    border: 2px solid #ccc;
     padding: 0 .4em;
   }
 
   #post ul,
   #post ol {
     margin-left: 1.35em;
+  }
+
+  #post li {
+    margin-top: 0.5em;
   }
 
   /* terminal */
