Revert style -- ugly on windows either way

--- a/css/screen.css
+++ b/css/screen.css
@@ -16,9 +16,7 @@ html, body {
 }
 
 body {
-  /*font: 1.1em helvetica, arial, clean, sans-serif;*/
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 1.2em;
+  font: 1.1em helvetica, arial, clean, sans-serif;
   font-weight: lighter;
   text-align: center;
   color: #4a4a4a;
