Add arial light for windows styling

--- a/css/screen.css
+++ b/css/screen.css
@@ -16,7 +16,7 @@ html, body {
 }
 
 body {
-  font: 1.1em helvetica, arial, clean, sans-serif;
+  font: 1.1em helvetica, arial light, clean, sans-serif;
   font-weight: lighter;
   text-align: center;
   color: #4a4a4a;
