--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,9 @@
   <title>{{ page.title }}</title>
   <meta name="author" content="Alex Clemmer" />
 
+  <!-- Google font nonsense because windows doesn't have HELVETICA (seriously) -->
+  <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
+
   <!-- syntax highlighting CSS -->
   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
 
