--- a/css/screen.css
+++ b/css/screen.css
@@ -16,7 +16,7 @@ html, body {
 }
 
 body {
-  font: 1.1em helvetica, Calibri, 'Lato', Candara, Segoe, Optima, Arial, sans-serif;
+  font: 1.1em helvetica, 'Lato', Calibri, Candara, Segoe, Optima, Arial, sans-serif;
   font-weight: lighter;
   text-align: center;
   color: #4a4a4a;
