--- a/css/screen.css
+++ b/css/screen.css
@@ -16,9 +16,8 @@ html, body {
 }
 
 body {
-  font: 1.1em helvetica, 'Lato', Calibri, Candara, Segoe, Optima, Arial, sans-serif;
-  font-family: helvetica, 'Lato', sans-serif;
-  font-weight: lighter;
+  font: 1.1em 'Segoe UI', helvetica, 'Lato', Arial, sans-serif;
+  font-weight: 300;
   text-align: center;
   color: #4a4a4a;
   background: #f5f5f5;
