Update CSS for main page

--- a/css/screen.css
+++ b/css/screen.css
@@ -235,6 +235,13 @@ ul.posts {
   text-align: center;
 }
 
+.site .postTitle {
+  display:inline-block;
+  width: 500px;
+  vertical-align:middle;
+  border-bottom:thin dotted #cacaca;
+}
+
 /*****************************************************************************/
 /*
 /* Posts
