--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,7 @@
   <p></p>
   <h1 id="site-title">Computer "scientist"</h1>
   <p><a href="http://www.nullspace.io" target="_new">Alex Clemmer</a> is a computer programmer. Other programmers love Alex, excitedly describing him as "employed here" and "the boss's son".</p>
+  <p>Alex is also a <a href="https://www.hackerschool.com/" target="_new">Hacker School</a> alum. Surely they do not at all regret admitting him!</p>
   <ul class="nav-list">
     <li><img alt="personal site" src="images/home3.png" /> <a href="http://www.nullspace.io" target="_new">personal site</a></li>
     <li><img alt="Twitter" src="images/twitter.png" /> <a href="https://twitter.com/hausdorff_space" target="_new">@hausdorff_space</a></li>
