Update profile picture

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
 <body>
 
 <div class="about">
-  <img alt="Alex" src="images/alex3.jpg" height="150" width="150"/>
+  <img alt="Alex" src="images/alex.jpg" height="170" width="170"/>
   <p></p>
   <h1 id="site-title">Computer "scientist"</h1>
   <p><a href="http://www.nullspace.io" target="_new">Alex Clemmer</a> is a computer programmer. Other programmers love Alex, excitedly describing him as "employed here" and "the boss's son".</p>
